--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -12,6 +12,7 @@
         <ResourceDictionary Source="/Styles/LoginStyle.xaml" />
         <ResourceDictionary Source="/Styles/InputStyle.xaml" />
         <ResourceDictionary Source="/Styles/NavBarStyle.xaml" />
+        <ResourceDictionary Source="/Themes/Generic.xaml" />
       </ResourceDictionary.MergedDictionaries>
       
       <Style TargetType="Button">
