--- a/SharpSchedule.WPF/Controls/BindableInput.xaml
+++ b/SharpSchedule.WPF/Controls/BindableInput.xaml
@@ -17,6 +17,6 @@
     </Grid.RowDefinitions>
 
     <TextBox x:Name="inputBind" TextChanged="InputBind_TextChanged" />
-    <TextBlock Grid.Row="1" x:Name="helperText" />
+    <TextBlock Grid.Row="1" x:Name="helperText" Margin="0,5,0,0" />
   </Grid>
 </UserControl>
