--- a/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
+++ b/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
@@ -18,6 +18,6 @@
     </Grid.RowDefinitions>
 
     <PasswordBox x:Name="passwordInput" PasswordChanged="PasswordInput_PasswordChanged" />
-    <TextBlock Grid.Row="1" x:Name="helperText" />
+    <TextBlock Grid.Row="1" x:Name="helperText" Margin="0,5,0,0" />
   </Grid>  
 </UserControl>
