--- a/SharpSchedule.WPF/Views/Dialogs/AppointmentDialog.xaml
+++ b/SharpSchedule.WPF/Views/Dialogs/AppointmentDialog.xaml
@@ -97,6 +97,13 @@
         IsEnabled="{Binding Enabled, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}">
       </controls:BindableInput>
 
+      <controls:DateTimeInput Margin="25,25,25,5" Grid.Row="4"
+        Input="{Binding Start, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+        HelperText="{Binding StartText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+        Valid="{Binding StartValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+        IsEnabled="{Binding Enabled, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}">
+      </controls:DateTimeInput>
+
       <Grid Grid.Row="5" Grid.ColumnSpan="2">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="*" />
