--- a/SharpSchedule.WPF/Views/AppointmentsView.xaml
+++ b/SharpSchedule.WPF/Views/AppointmentsView.xaml
@@ -22,10 +22,16 @@
     <Label Grid.Column="1" Content="Appointments" HorizontalAlignment="Left" VerticalAlignment="Bottom"
            FontSize="30" Margin="0, 5"/>
 
-    <Button Grid.Column="1" Content="SEARCH" HorizontalAlignment="Right" Command="{Binding SearchAppointments}"
-            CommandParameter="{Binding Text, ElementName=Appointments_Search}" />
-    
-    <TextBox Name="Appointments_Search" Grid.Column="2" Margin="38" FontSize="32" />
+    <Grid Grid.Column="2">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+
+      <Button Grid.Column="2" Content="FILTER" Command="{Binding FilterAppointments}" />
+      
+    </Grid>
 
     <DataGrid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" AutoGenerateColumns="False" 
               x:Name="AppointmentGrid" IsReadOnly="True" SelectionMode="Single"
